objects/AgencyAddress__c.object
<CustomObject>
    <description>A history of addresses of each government agency.</description>
    <fields>
        <fullName>AgencyAddressEID__c</fullName>
        <description>The Enterprise ID for this Agency Address.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Agency Address.</inlineHelpText>
        <label>Agency Address EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <referenceTo>Agency__c</referenceTo>
        <relationshipLabel>Agency Addresses</relationshipLabel>
        <relationshipName>AgencyAddresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CityName__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Agency Addresses</relationshipLabel>
        <relationshipName>AgencyAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <description>The full name of the Agency Address, Agency name street address city state.

 last name first.</description>
        <formula>Trim(LEFT(Agency__r.Name,25)) &amp; &apos;_&apos; &amp;  Trim(LEFT(StreetAddressText__c,25)) &amp; &apos;_&apos; &amp; Trim(LEFT(CityName__c,24)) &amp; &apos;_&apos;&amp;Trim(LEFT( State__r.Name,3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The full name of the Agency Address, Agency name street address city state.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>15</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Agency Addresses</relationshipLabel>
        <relationshipName>AgencyAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetAddressText__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Agency Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>